--- a/example/example_app/templates/app.html
+++ b/example/example_app/templates/app.html
@@ -39,7 +39,7 @@
     <script src="{% static 'js/js.cookie.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
     <script>
-      var chatterbotUrl = '{% url "chatterbot" %}';
+      var chatterbotUrl = '{% url "chatterbot:chatterbot" %}';
       var csrftoken = Cookies.get('csrftoken');
 
       function csrfSafeMethod(method) {
